Añadido fondo secundario a los botones de los módulos en el temario para mejorar la visibilidad de los módulos que se verán y "desactivar" lo que no se verá (aunque sigue funcionando).

--- a/index.html
+++ b/index.html
@@ -1454,10 +1454,10 @@ var {
     <div class='typora-export-content'>
 <div id='write'  class=''><h1 id='alfabetización-digital' class="display-1 text-center"><span>Alfabetización digital</span></h1><p><span>Este </span><strong><span>curso de alfabetización digital</span></strong><span> está diseñado para brindar a los participantes habilidades esenciales en el uso de la tecnología. A través de módulos que abarcan desde la navegación básica en Windows hasta la creación de documentos en Microsoft Word y Excel, los estudiantes adquirirán conocimientos prácticos. Además, se exploran temas como seguridad en línea, certificados digitales y uso de TPVs en PDAs. </span></p><p><span>El objetivo es dotar de una mayor confianza en el manejo de herramientas digitales, acceso a servicios en línea y una base sólida para la vida digital moderna.</span></p><h2 id='temario'><span>Temario</span></h2><figure class='table-figure'>
     <div class="module-list">
-        <a href="docs/00-intro.html" class="module-button">
+        <a href="docs/00-intro.html" class="module-button bg-secondary">
             <span>📘</span> 00 Introducción
         </a>
-        <a href="docs/01-windows.html" class="module-button">
+        <a href="docs/01-windows.html" class="module-button bg-secondary">
             <span>💻</span> 01 Windows
         </a>
         <a href="docs/02-00-ofimatica.html" class="module-button">
@@ -1466,13 +1466,13 @@ var {
         <a href="docs/03-internet.html" class="module-button">
             <span>🌐</span> 03 Internet e Inteligencia Artificial
         </a>
-        <a href="docs/04-seguridad.html" class="module-button">
+        <a href="docs/04-seguridad.html" class="module-button bg-secondary">
             <span>🔒</span> 04 Seguridad informática
         </a>
-        <a href="docs/05-certificado.html" class="module-button">
+        <a href="docs/05-certificado.html" class="module-button bg-secondary">
             <span>🔑</span> 05 Certificado digital
         </a>
-        <a href="docs/06-tpv.html" class="module-button">
+        <a href="docs/06-tpv.html" class="module-button bg-secondary">
             <span>💳</span> 06 TPV y PDA
         </a>
     </div>
